deployment/k8s-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ses-voting
  labels:
    app: bot
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bot
    spec:
      containers:
        - name: ses-voting
          image: gcr.io/ses-voting/ses-voting:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 2
            periodSeconds: 8
            failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: ses-voting
  labels:
    app: bot
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: bot
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ses-voting
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ses-voting
spec:
  backend:
    serviceName: ses-voting
    servicePort: 80
